# wx_auto_push

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  analyze_detail_content.py  analyze_detail_images.py  analyze_eyecatch_image.py  analyze_pixivision_home.py  analyze_pixivision_html.py  analyze_sidebar.py  config.development.json.example  config.production.json.example  data.db  docker-compose.yml  main.py  proxy_pool_config_example.json  pyproject.toml  requirements.txt  test_download_ctrl_c.py  test_proxy_api.py  test_proxy_pool.py  test_schedule_ctrl_c.py
.github/workflows/: ci-cd.yml  release.yml
src/crawlers/: anime_crawler.py  base_crawler.py  crawler_factory.py  image_crawler.py  pixivision_crawler.py
src/push/: draft_service.py  pixivision_service.py  upload_history_service.py  wechat_callback_server.py  wechat_client.py  wechat_draft_service.py  wechat_material_service.py  wechat_menu_service.py  wechat_publish_service.py  wechat_push_service.py
src/scheduler/: schedule_manager.py
tests/: README.md  test_config.py  test_crawler.py  test_download_ctrl_c.py  test_download_list.py  test_draft_api.py  test_image_compressor.py  test_pixiv_download.py  test_pixivision_crawler.py  test_pixivision_detail.py  test_pixivision_html.py  test_pixivision_integration.py  test_pixivision_service.py  test_proxy_pool_service.py  test_schedule_manager.py  test_storage.py  test_upload_history_service.py  test_wechat_material_service.py  test_wechat_menu_service.py  test_wechat_publish_service.py  test_wechat_push_service.py
(+11 files in other folders)
