[project]
name = "wx-auto-push"
version = "1.0.0"
description = "微信公众号自动推送程序，支持定时推送动漫新闻和图片"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "wechatpy",
    "apscheduler",
    "redis",
    "python-dotenv",
    "pytest>=9.0.2",
    "flask>=3.1.3",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
